# letta-rs

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  HEADER_PARAMETERS.md  PHASE1_ARCHIVE.md  PHASE2_ARCHIVE.md  README.md  cleanup_test_resources.sh  compose.yml  server.env.example
.claude/: settings.json  settings.local.json
.github/workflows/: ci-nix.yml  release.yml
examples/: sample_tool.py  sample_tool_schema.json  weather_tool.py  weather_tool_schema.json
examples/tools-validation/: README.md  python_malformed_docstring.py  python_no_args_section.py  python_no_docstring.py  schema_missing_name.json  schema_missing_parameters.json  schema_missing_properties.json  schema_missing_type.json  schema_property_no_description.json  schema_property_no_type.json  valid_tool.py  valid_tool_schema.json
local-server/: compose.yml
nix/: test-cloud-api.sh  test-local-server.sh
nix/modules/: devshell.nix  rust.nix
scripts/: claude-code-brach-protection.sh  claude-code-quality.sh
src/: auth.rs  cli.rs  cli_old.rs  client.rs  environment.rs  error.rs  lib.rs  pagination.rs  retry.rs  streaming.rs  test_helpers.rs  utils.rs
src/api/: agents.rs  batch.rs  blocks.rs  groups.rs  health.rs  identities.rs  jobs.rs  memory.rs  messages.rs  misc.rs  mod.rs  models.rs  projects.rs  providers.rs  runs.rs  sources.rs  tags.rs  telemetry.rs  templates.rs  tools.rs  voice.rs
src/cli/: mod.rs
src/cli/commands/: agent.rs  memory.rs  message.rs  mod.rs  sources.rs  tools.rs
src/types/: agent.rs  batch.rs  common.rs  groups.rs  health.rs  identity.rs  memory.rs  message.rs  mod.rs  models.rs  project.rs  provider.rs  runs.rs  source.rs  tags.rs  telemetry.rs  template.rs  tool.rs  voice.rs
tests/: agent_api_integration.rs  agent_deserialization_test.rs  archival_memory_test.rs  azure_message_test.rs  batch_api_test.rs  blocks_api_test.rs  blocks_basic_test.rs  cloud_api_test.rs  cloud_message_test.rs  cloud_sources_test.rs  composio_integration_test.rs  core_memory_test.rs  create_test.rs  error_handling_test.rs  groups_api_test.rs  health_api_test.rs  identities_api_test.rs  jobs_api_test.rs  local_server_test.rs  local_server_validation.rs  mcp_integration_test.rs  message_api_test.rs  message_streaming_test.rs  message_update_test.rs  models_api_test.rs  pagination_test.rs  projects_api_test.rs  providers_api_test.rs  retry_test.rs  runs_api_test.rs  simple_message_test.rs  simple_test.rs  sources_api_test.rs  tags_api_test.rs  telemetry_api_test.rs  templates_api_test.rs  tools_api_test.rs  voice_api_test.rs
